@@ -1853,8 +1853,8 @@ socket_ip4loopback.o socket_v6loopback.o socket_v4mappedprefix.o \
 socket_v6any.o spf.o dns.o auto_uids.o qregex_sql.o srs.o \
 tablematch.o greylist.o query_skt.o fn_handler.o load_mysql.o \
 auto_break.o auto_control.o auto_assign.o auto_prefix.o \
-parse_env.o auto_sysconfdir.o socket.lib dns.lib tls.lib \
-gsasl.lib mysql_config
+auto_libexec.o parse_env.o auto_sysconfdir.o socket.lib \
+dns.lib tls.lib gsasl.lib mysql_config
 	if test $(SYSTEM) = DARWIN ; then \
 		$(CC) -dynamiclib -o qmail_smtpd.so \
 		smtpd.o rcpthosts.o recipients.o indimail_stub.o load_mysql.o \
@@ -1865,7 +1865,7 @@ gsasl.lib mysql_config
 		socket_ip4loopback.o socket_v6loopback.o socket_v6any.o \
 		mail_acl.o auto_uids.o qregex_sql.o tablematch.o greylist.o \
 		auto_break.o auto_control.o auto_assign.o query_skt.o fn_handler.o \
-		tlsarralloc.o auto_prefix.o auto_sysconfdir.o \
+		tlsarralloc.o auto_prefix.o auto_libexec.o auto_sysconfdir.o \
 		$(static_option) $(QMAILLIB) $(dynamic_option) \
 		-L../libsrs2-x/libsrs2/.libs \
 		`cat gsasl.lib socket.lib dns.lib tls.lib srs.lib`; \
@@ -1878,7 +1878,7 @@ gsasl.lib mysql_config
 		socket_v4mappedprefix.o socket_ip4loopback.o socket_v6loopback.o \
 		socket_v6any.o mail_acl.o auto_uids.o qregex_sql.o tablematch.o \
 		greylist.o auto_break.o indimail_stub.o load_mysql.o query_skt.o \
-		fn_handler.o tlsarralloc.o auto_prefix.o auto_sysconfdir.o \
+		fn_handler.o tlsarralloc.o auto_prefix.o auto_libexec.o auto_sysconfdir.o \
 		-Wl,-Bstatic $(QMAILLIB) -Wl,-Bdynamic \
 		-L../libsrs2-x/libsrs2/.libs \
 		`cat gsasl.lib socket.lib dns.lib tls.lib srs.lib` -ldl; \
@@ -1893,8 +1893,8 @@ socket_ip4loopback.o socket_v6loopback.o socket_v4mappedprefix.o \
 socket_v6any.o mail_acl.o spf.o dns.o auto_uids.o auto_qmail.o \
 qregex_sql.o tablematch.o greylist.o auto_assign.o qcount_dir.o \
 query_skt.o fn_handler.o tlsarralloc.o load_mysql.o srs.o \
-auto_sysconfdir.o auto_break.o auto_prefix.o socket.lib dns.lib \
-tls.lib gsasl.lib srs.lib mysql_config conf-sql
+auto_sysconfdir.o auto_break.o auto_prefix.o auto_libexec.o \
+socket.lib dns.lib tls.lib gsasl.lib srs.lib mysql_config conf-sql
 	./load qmail-smtpd smtpd.o rcpthosts.o recipients.o srs.o \
 	ip.o ipme.o ipalloc.o strsalloc.o control.o etrn.o atrn.o \
 	qcount_dir.o received.o wildmat.o qmail.o variables.o \
@@ -1904,7 +1904,7 @@ tls.lib gsasl.lib srs.lib mysql_config conf-sql
 	indimail_stub.o qregex_sql.o tablematch.o greylist.o auto_break.o \
 	auto_control.o auto_assign.o query_skt.o fn_handler.o \
 	tlsarralloc.o load_mysql.o auto_sysconfdir.o auto_prefix.o \
-	parse_env.o $(static_option) $(QMAILLIB) \
+	auto_libexec.o parse_env.o $(static_option) $(QMAILLIB) \
 	-L../libsrs2-x/libsrs2/.libs \
 	$(dynamic_option) `cat gsasl.lib socket.lib dns.lib tls.lib srs.lib` \
 	-lcrypto -ldl
@@ -2459,7 +2459,7 @@ auto_prefix.h
 	./compile etrn.c
 
 atrn.o: \
-compile atrn.c etrn.h rcpthosts.h control.h auto_prefix.h
+compile atrn.c etrn.h rcpthosts.h control.h auto_libexec.h
 	./compile atrn.c
 
 ############### Begin queue-fix
