@@ -1,26 +1,5 @@
 /*
- * $Log: atrn.c,v $
- * Revision 1.7  2022-01-30 08:26:55+05:30  Cprogrammer
- * replaced execvp with execv
- *
- * Revision 1.6  2008-05-26 22:19:31+05:30  Cprogrammer
- * removed auto_qmail.h
- *
- * Revision 1.5  2004-10-22 20:21:44+05:30  Cprogrammer
- * added RCS id
- *
- * Revision 1.4  2004-09-25 23:59:18+05:30  Cprogrammer
- * removed stdio.h
- *
- * Revision 1.3  2003-10-23 01:15:51+05:30  Cprogrammer
- * fixed compilation warnings
- *
- * Revision 1.2  2003-09-27 21:10:21+05:30  Cprogrammer
- * added code to read morercpthosts
- *
- * Revision 1.1  2003-07-05 17:31:33+05:30  Cprogrammer
- * Initial revision
- *
+ * $Id: atrn.c,v 1.8 2023-11-26 12:48:18+05:30 Cprogrammer Exp mbhangui $
  */
 #include <case.h>
 #include <sig.h>
@@ -35,7 +14,7 @@
 #include "etrn.h"
 #include "rcpthosts.h"
 #include "control.h"
-#include "auto_prefix.h"
+#include "auto_libexec.h"
 
 int             err_child();
 void            die_nomem();
@@ -53,17 +32,17 @@ atrn_queue(char *arg, char *remoteip)
 	struct constmap mapetrn;
 	stralloc        bin = {0};
 
-	if(flagrcpt)
+	if (flagrcpt)
 		flagrcpt = rcpthosts_init();
-	if((flagetrn = control_readfile(&etrn, "etrnhosts", 0)) == -1)
+	if ((flagetrn = control_readfile(&etrn, "etrnhosts", 0)) == -1)
 		die_control();
-	if(flagrcpt || !flagetrn)
+	if (flagrcpt || !flagetrn)
 		return(-2);
 	if (!constmap_init(&mapetrn, etrn.s, etrn.len, 0))
 		die_nomem();
 	for(cptr = domain_ptr = arg;;cptr++) {
-		if(*cptr == ' ' || *cptr == ',' || !*cptr) {
-			if(*cptr) {
+		if (*cptr == ' ' || *cptr == ',' || !*cptr) {
+			if (*cptr) {
 				end_flag = 0;
 				*cptr = 0;
 			} else
@@ -73,7 +52,7 @@ atrn_queue(char *arg, char *remoteip)
 				return(-2);
 			if (rcpthosts(domain_ptr, len, 1) != 1)
 				return(-2);
-			if(end_flag)
+			if (end_flag)
 				break;
 			else
 				*cptr = ' ';
@@ -88,8 +67,8 @@ atrn_queue(char *arg, char *remoteip)
 		sig_pipedefault();
 		dup2(1, 7);
 		dup2(0, 6);
-		if (!stralloc_copys(&bin, auto_prefix) ||
-				!stralloc_catb(&bin, "/bin/atrn", 9) ||
+		if (!stralloc_copys(&bin, auto_libexec) ||
+				!stralloc_catb(&bin, "/atrn", 5) ||
 				!stralloc_0(&bin))
 			strerr_die1x(111, "atrn: fatal: out of memory");
 		binatrnargs[0] = bin.s;
@@ -112,7 +91,35 @@ atrn_queue(char *arg, char *remoteip)
 void
 getversion_atrn_c()
 {
-	static char    *x = "$Id: atrn.c,v 1.7 2022-01-30 08:26:55+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: atrn.c,v 1.8 2023-11-26 12:48:18+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
+
+/*
+ * $Log: atrn.c,v $
+ * Revision 1.8  2023-11-26 12:48:18+05:30  Cprogrammer
+ * use auto_libexec for atrn script
+ *
+ * Revision 1.7  2022-01-30 08:26:55+05:30  Cprogrammer
+ * replaced execvp with execv
+ *
+ * Revision 1.6  2008-05-26 22:19:31+05:30  Cprogrammer
+ * removed auto_qmail.h
+ *
+ * Revision 1.5  2004-10-22 20:21:44+05:30  Cprogrammer
+ * added RCS id
+ *
+ * Revision 1.4  2004-09-25 23:59:18+05:30  Cprogrammer
+ * removed stdio.h
+ *
+ * Revision 1.3  2003-10-23 01:15:51+05:30  Cprogrammer
+ * fixed compilation warnings
+ *
+ * Revision 1.2  2003-09-27 21:10:21+05:30  Cprogrammer
+ * added code to read morercpthosts
+ *
+ * Revision 1.1  2003-07-05 17:31:33+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
